--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
                 <div id="Name">
                     <h1>Sandy Sundram</h1>
                 </div>
-                <div id="Small">
-                    <div id="Nav">
-                        <ul>
-                            <li><a href="index.html">About</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
+                <div id="Nav">
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -29,7 +27,7 @@
                
                 <p> <img id="HomeImage" src="assets/images/Sandy.jpg">
                     <br><span>My name is Sandy Sundram. I was born on an airforce base in southern India and was raised all my life in Bombay. I currently live in the El Cerrito hills with my wife Nicola.
-                        <br>I have a bachelors degree in computer enineering from Purdue university. I am currently in sotware quality assurance and lead of team of quality engineers. I have over 14 years of work experience, covering multiple roles within the SDLC - developer, business analyst and project manager.
+                        <br>I have a bachelors degree in computer enineering from Purdue University. I am currently in sotware quality assurance and lead of team of quality engineers. I have over 14 years of work experience, covering multiple roles within the SDLC - developer, business analyst and project manager.
                         <br>Outside of work, I like the outdoors, sports and any physical activity. I live for travel, enjoy nature photography and pass time tinkering with my car. Strangely enough, I recently have got into, and enjoy gardening with my wife (who would have thouht??).
                     </span>
                 </p>
