--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,14 @@
             <div id="About">
                 <h1>Portfolio</h1>
             </div>
-            <div class="One">
-                <img src="assets/images/tv.jpg">    
-                <div class="imagename">
-                    <h5>Hangman</h5>
+            <a href="psychic-game/index.html" target="_blank">
+                <div class="One">
+                    <img src="assets/images/tv.jpg">    
+                    <div class="imagename">
+                        <h5>Hangman</h5>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="Two">
                 <img src="assets/images/ipad.jpg">    
                 <div class="imagename">
