update Psychic link

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,18 +24,18 @@
             <div id="About">
                 <h1>Portfolio</h1>
             </div>
-            <a href="psychic-game/index.html" target="_blank">
+            <a href="https://sandysundram.github.io/psychic-game/" target="_blank">
                 <div class="One">
                     <img src="assets/images/tv.jpg">    
                     <div class="imagename">
-                        <h5>Hangman</h5>
+                        <h5>Psychic</h5>
                     </div>
                 </div>
             </a>
             <div class="Two">
                 <img src="assets/images/ipad.jpg">    
                 <div class="imagename">
-                    <h5>RPG Game</h5>
+                    <h5>Hangman</h5>
                 </div>
             </div>
             <div class="Three">
