--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                 </div>
             </a>
             <div class="Two">
-                <img src="assets/images/ipad.jpg">    
+                <img src="https://sandysundram.github.io/word-guess-game/" target="_blank">    
                 <div class="imagename">
                     <h5>Hangman</h5>
                 </div>
