updated portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,14 @@
                     </div>
                 </div>
             </a>
-            <div class="Two">
-                <img src="https://sandysundram.github.io/word-guess-game/" target="_blank">    
-                <div class="imagename">
-                    <h5>Hangman</h5>
+            <a href="https://sandysundram.github.io/word-guess-game/" target="_blank">
+                <div class="Two">
+                    <img src="assets/images/ipad.jpg">    
+                    <div class="imagename">
+                        <h5>Hangman</h5>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="Three">
                 <img src="assets/images/signs.jpg">    
                 <div class="imagename">
