--- a/portfolio.html
+++ b/portfolio.html
@@ -40,12 +40,14 @@
                     </div>
                 </div>
             </a>
-            <div class="Three">
-                <img src="assets/images/signs.jpg">    
-                <div class="imagename">
-                    <h5>Trivia Game</h5>
+            <a href="https://sandysundram.github.io/unit-4-game/" target="_blank">
+                <div class="Three">
+                    <img src="assets/images/signs.jpg">    
+                    <div class="imagename">
+                        <h5>Crystals Collector</h5>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="four">
                 <img src="assets/images/color.jpg">    
                 <div class="imagename">
