--- a/portfolio.html
+++ b/portfolio.html
@@ -48,12 +48,14 @@
                     </div>
                 </div>
             </a>
+            <a href="https://sandysundram.github.io/TriviaGame/" target="_blank">
             <div class="four">
                 <img src="assets/images/color.jpg">    
                 <div class="imagename">
-                    <h5>Rutgers Info Widget</h5>
+                    <h5>Trivia Game</h5>
                 </div>
             </div>
+            </a>
             <div class="five">
                 <img src="assets/images/dj.jpg">    
                 <div class="imagename">
