--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,17 @@
             </a>
             <a href="https://sandysundram.github.io/liri-node-app/" target="_blank">
                 <div class="six">
-                    <img src="assets/images/tree.jpg">    
+                    <img src="assets/images/signs.jpg">    
                     <div class="imagename">
                         <h5>LIRI Bot</h5>
+                    </div>
+                </div>
+            </a>
+            <a href="https://sandysundram.github.io/Bamazon/" target="_blank">
+                <div class="four">
+                    <img src="assets/images/tree.jpg">    
+                    <div class="imagename">
+                        <h5>Bamazon</h5>
                     </div>
                 </div>
             </a>
