added friendFinder and NewsApp

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,22 @@
                     </div>
                 </div>
             </a>
+            <a href="https://github.com/SandySundram/friend_finder" target="_blank">
+                <div class="five">
+                    <img src="assets/images/ipad.jpg">    
+                    <div class="imagename">
+                        <h5>Friend Finder</h5>
+                    </div>
+                </div>
+            </a>
+            <a href="https://github.com/SandySundram/NewsApp" target="_blank">
+                <div class="six">
+                    <img src="assets/images/tv.jpg">    
+                    <div class="imagename">
+                        <h5>News App</h5>
+                    </div>
+                </div>
+            </a>
         </div>
 
         <div id="Footer">
