added click game

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,9 +90,17 @@
             </a>
             <a href="https://github.com/SandySundram/NewsApp" target="_blank">
                 <div class="six">
-                    <img src="assets/images/tv.jpg">    
+                    <img src="assets/images/color.jpg">    
                     <div class="imagename">
                         <h5>News App</h5>
+                    </div>
+                </div>
+            </a>
+            <a href="https://sandysundram.github.io/clickgame/" target="_blank">
+                <div class="four">
+                    <img src="assets/images/tree.jpg">    
+                    <div class="imagename">
+                        <h5>Click Game</h5>
                     </div>
                 </div>
             </a>
